--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 # TODO: Before using the following line ensure Jenkins has these
 # all these install/configured first
 #envlist = py26,py27,py33,pypy,pep8
-envlist = pep8,py27
+envlist = pep8,py26,py27
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
