Add additional environments to test against

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,5 @@
 [tox]
-# TODO: Before using the following line ensure Jenkins has these
-# all these install/configured first
-#envlist = py26,py27,py33,pypy,pep8
-envlist = pep8,py26,py27
+envlist = pep8,py26,py27,py33
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
