Revamp the project skeleton

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,1 @@
-[run]
-omit = etc/*,setup.py,*egg*,.tox/*,symantecssl/tests/*
-
-[report]
-ignore_errors = True
-exclude_lines =
-    pragma: no cover
-    @abc.abstractmethod
+branch = True
