--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,13 @@
-*.py[cod]
-
-# C extensions
-*.so
-
-# Packages
+*.egg-info/
 *.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
+*.py[co]
 
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
+.tox/
+.cache/
 .coverage
-.tox
-nosetests.xml
 
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+__pycache__/
+_build/
+build/
+dist/
+htmlcov/
