--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,37 @@
 [tox]
-# TODO: One Jenkins is configured for py33 add it in as well
-envlist = pep8,py26,py27
+envlist = py26,py27,pypy,py32,py33,py34,docs,pep8,py2pep8
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+deps =
+    coverage
+    pytest
+commands =
+    coverage run --source=symantecssl/,tests/ -m pytest --capture=no --strict {posargs}
+    coverage report -m
 
+[testenv:docs]
+deps =
+    sphinx
+    sphinx_rtd_theme
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -W -b latex -d {envtmpdir}/doctrees docs docs/_build/latex
+    sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+
+[testenv:py2pep8]
+basepython = python2.6
+deps =
+    flake8
+    pep8-naming
+commands = flake8 .
 
 [testenv:pep8]
-commands = flake8
-
-[testenv:coverage]
-commands = coverage html {posargs:--include="*symantecssl*"}
+basepython = python3.2
+deps =
+    flake8
+    pep8-naming
+commands = flake8 .
 
 [flake8]
-exclude = .git,.idea,.tox,bin,dist,tools,*.egg-info,.update-venv,.venv*,doc
-
-[hacking]
-import_exceptions = marconi.openstack.common.gettextutils._
-
+exclude = .tox,*.egg
+select = E,W,F,N
