Don't print coverage of the tests

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps =
     coverage
     pytest
 commands =
-    coverage run --source=symantecssl/,tests/ -m pytest --capture=no --strict {posargs}
+    coverage run --source=symantecssl/ -m pytest --capture=no --strict {posargs}
     coverage report -m --fail-under 100
 
 [testenv:docs]
