Comment out testing Python 3.4 on Travis until they have it

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   - TOXENV=py27
   - TOXENV=py32
   - TOXENV=py33
-  - TOXENV=py34
+  # - TOXENV=py34
   - TOXENV=pypy
   - TOXENV=pep8
   - TOXENV=py2pep8
