Move unit tests into a sub directory of tests and mark unit/functional

--- a/tox.ini
+++ b/tox.ini
@@ -36,3 +36,8 @@ commands = flake8 .
 [flake8]
 exclude = .tox,*.egg
 select = E,W,F,N
+
+[pytest]
+markers =
+    unit: These fast tests are designed to test small units
+    functional: These slow tests are designed to test against the API
