--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
-python: 3.3
+python: 3.4
 
 env:
   - TOXENV=py26
   - TOXENV=py27
   - TOXENV=py32
   - TOXENV=py33
-  # - TOXENV=py34
+  - TOXENV=py34
   - TOXENV=pypy
   - TOXENV=pep8
   - TOXENV=py2pep8
