--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py26,py27,pypy,py32,py33,py34,docs,pep8,py2pep8
 
 [testenv]
 deps =
+    betamax>=0.4.0
     coverage
     pretend
     pytest
