--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pytest
 commands =
     coverage run --source=symantecssl/ -m pytest --capture=no --strict -m unit {posargs}
-    py.test --capture=no --strict -m functional {posargs}
+    py.test --strict -m functional {posargs}
     coverage report -m --fail-under 100
 
 [testenv:docs]
