Correctly disable Betamax
Apparently record_mode = "off" is not actually a thing so we'll
do something a bit more jankier to disable betamax when we want
to ensure we are actually hitting the API.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - TOXENV=docs
 
 install:
-  - "if [[ $TRAVIS_SECURE_ENV_VARS == 'true' ]]; then export SYMANTEC_RECORD_MODE=off; fi"
+  - "if [[ $TRAVIS_SECURE_ENV_VARS == 'true' ]]; then export SYMANTEC_NO_BETAMAX=1; fi"
   - pip install tox coveralls
 
 script:
