Adding functionality for GetModifiedOrders
Adding the new GetModifiedOrders call from the Symantec SOAPXML
API. Also adding unit tests for this feature and updated version
number.

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,10 @@ deps =
     coverage
     pretend
     pytest
+    mock
+    lxml
 commands =
-    coverage run --source=symantecssl/ -m pytest --capture=no --strict -m unit {posargs}
-    py.test --strict -m functional {posargs}
+    coverage run --source=symantecssl/ -m pytest --capture=no --strict {posargs}
     coverage report -m --fail-under 100
 
 [testenv:docs]
