--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
     - secure: "D8D1qFbBOm0ZEowOAXuYnzI4s1rHMRiepJks6MyztcsxfmrW0KMG8iGFRm7MvKoIpwR/DKN8bEgDuQWnPQ2WERBX/oaP8oidqZ4QP6/Fm0cOlffqNqaLNN0IlbPbmFoQRs9pISotPip6e4jyaJezGH7Cf0NhYO+2ExTwWiTBdTo="
     - secure: "DoVyyBrL0PFeP9GIevRUd0wKt2F5893TZ6SUgdRIS6NxpRIaqgqWvkYfSZs5AczaCS4tKw4ZotH5v5veS5ffI0S1pLTLgXoTMga8pi4g6xKTwVw2zs6rCBJdz1DaZrI0ZnnYinFpY98mVa/JfLmxosU/Bp24f5nWTvcqLuunJoQ="
     - secure: "MM0Z07eqf2EGar++GaXytxhiBHuLbnTIGm8M59GSbUHBrFAGLe9+nP9/KEqCzMOuitzKEzYvml2NcmBsNwjIVJjlOM1ykLw8CdKVEmFaE2jr/4TLyl8MGNg4fO32SUIRVDXlCfVBCVt2/hMIxPfIMJs13XAa30NmtOqO1xPUZ7s="
+    - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
+    - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
+
   matrix:
   - TOXENV=py26
   - TOXENV=py27
@@ -22,6 +25,11 @@ env:
 
 install:
   - "if [[ $TRAVIS_SECURE_ENV_VARS == 'true' ]]; then export SYMANTEC_NO_BETAMAX=1; fi"
+  # Before installation, we'll run ``pip wheel``, this will build wheels for
+  # anything that doesn't already have one on PyPI.
+  - pip wheel tox coveralls
+  # Actually install our dependencies now, this will pull from the directory
+  # that the first command placed the Wheels into.
   - pip install tox coveralls
 
 script:
